Switch to 213-EAP platform. Avoid using obsolete VMOptions methods.